--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "dotenv": "^10.0.0",
+    "elementz": "^2.0.1",
     "google-map-react": "^2.1.9",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
