--- a/server/package.json
+++ b/server/package.json
@@ -46,6 +46,7 @@
     "mocha": "^8.2.1",
     "mongoose": "^5.12.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.6.2",
     "supertest": "^4.0.2",
     "swagger-ui-express": "^4.1.6"
   },
