--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-regular-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -16,7 +22,20 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "@themesberg/react-bootstrap": "^1.4.1",
+    "bootstrap": "5.0.0-beta1",
+    "chartist": "^0.11.4",
+    "chartist-plugin-tooltips-updated": "^0.1.4",
+    "moment-timezone": "^0.5.31",
+    "node-sass": "^4.14.1",
+    "react-chartist": "^0.14.3",
+    "react-copy-to-clipboard": "^5.0.3",
+    "react-datetime": "^3.0.4",
+    "react-github-btn": "^1.2.0",
+    "react-live": "^2.2.3",
+    "react-transition-group": "^4.4.1",
+    "simplebar-react": "^2.3.0",
+    "react-router-hash-link": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
