--- a/client/package.json
+++ b/client/package.json
@@ -12,30 +12,31 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "dotenv": "^10.0.0",
-    "elementz": "^2.0.1",
-    "google-map-react": "^2.1.9",
-    "jwt-decode": "^3.1.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-geocode": "^0.2.3",
-    "react-icons": "^4.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
     "@themesberg/react-bootstrap": "^1.4.1",
     "bootstrap": "5.0.0-beta1",
     "chartist": "^0.11.4",
     "chartist-plugin-tooltips-updated": "^0.1.4",
+    "dotenv": "^10.0.0",
+    "elementz": "^2.0.1",
+    "google-map-react": "^2.1.9",
+    "jwt-decode": "^3.1.2",
     "moment-timezone": "^0.5.31",
     "node-sass": "^4.14.1",
+    "react": "^17.0.2",
     "react-chartist": "^0.14.3",
     "react-copy-to-clipboard": "^5.0.3",
     "react-datetime": "^3.0.4",
+    "react-dom": "^17.0.2",
+    "react-geocode": "^0.2.3",
     "react-github-btn": "^1.2.0",
+    "react-icons": "^4.2.0",
     "react-live": "^2.2.3",
+    "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.3.1",
+    "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "react-transition-group": "^4.4.1",
-    "simplebar-react": "^2.3.0",
-    "react-router-hash-link": "^2.3.1"
+    "simplebar-react": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
