--- a/.github/workflows/develop_safe-courier.yml
+++ b/.github/workflows/develop_safe-courier.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: npm install, build, and test
       run: |
-        npm install
+        npm run instDep && npm run server
         npm run build --if-present
         npm run test --if-present
 
