--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,19 +1,22 @@
-FROM node:14
+FROM node:15
 
 # Create app directory
-WORKDIR /usr/src/app
+WORKDIR /app
 
 # Install app dependencies
-# A wildcard is used to ensure both package.json AND package-lock.json are copied
-# where available (npm@5+)
 COPY package*.json ./
 
-RUN npm install
-# If you are building your code for production
-# RUN npm ci --only=production
+ARG NODE_ENV
+
+RUN if [ "$NODE_ENV" == "development" ]; \
+    then npm install; \
+    else npm install --only=production; \
+    fi
 
 # Bundle app source
-COPY . .
+COPY . ./
 
-EXPOSE 80
+ENV PORT 5000
+
+EXPOSE ${PORT}
 CMD [ "node", "src/index.js" ]
