--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-github-btn": "^1.2.0",
     "react-icons": "^4.2.0",
     "react-live": "^2.2.3",
+    "react-loading-skeleton": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.3.1",
     "react-scripts": "4.0.3",
