--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,11 @@
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@fullcalendar/bootstrap": "^5.8.0",
+    "@fullcalendar/daygrid": "^5.8.0",
+    "@fullcalendar/interaction": "^5.8.0",
+    "@fullcalendar/react": "^5.8.0",
+    "@fullcalendar/timegrid": "^5.8.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -20,16 +25,22 @@
     "elementz": "^2.0.1",
     "google-map-react": "^2.1.9",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.7.1",
     "moment-timezone": "^0.5.31",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-chartist": "^0.14.3",
     "react-copy-to-clipboard": "^5.0.3",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.4",
     "react-geocode": "^0.2.3",
     "react-github-btn": "^1.2.0",
     "react-icons": "^4.2.0",
+    "react-leaflet": "^3.2.0",
     "react-live": "^2.2.3",
     "react-loading-skeleton": "^2.2.0",
     "react-router-dom": "^5.2.0",
@@ -37,7 +48,9 @@
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "react-transition-group": "^4.4.1",
-    "simplebar-react": "^2.3.0"
+    "simplebar-react": "^2.3.0",
+    "sweetalert2": "^11.0.20",
+    "sweetalert2-react-content": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
