--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "google-map-react": "^2.1.9",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.7.1",
+    "mapbox-gl": "^2.3.1",
     "moment-timezone": "^0.5.31",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
