--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/interaction": "^5.8.0",
     "@fullcalendar/react": "^5.8.0",
     "@fullcalendar/timegrid": "^5.8.0",
+    "@mapbox/mapbox-gl-directions": "^4.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
