--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "safe courier api for courier delivery service.",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index.js --trace-warnings",
-    "prod": "node src/index.js --trace-warnings",
+    "dev": "nodemon src/index.js --trace-warnings",
+    "start": "node src/index.js --trace-warnings",
     "test": "mocha --recursive src/server/test --exit"
   },
   "engines": {
@@ -26,7 +26,6 @@
   "homepage": "https://github.com/kallyas/safe-courier#readme",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
-    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "core-util-is": "^1.0.2",
@@ -36,19 +35,16 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.3.0",
     "express-validator": "^6.12.1",
-    "generate-mocha": "^1.0.0",
     "hash": "^0.2.1",
     "helmet": "^4.6.0",
     "http-errors": "^1.8.0",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
-    "mockgoose": "^8.0.4",
     "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
     "nodemailer": "^6.6.3",
     "redis": "^3.1.2",
-    "supertest": "^4.0.2",
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
