--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client": "cd client && npm start",
     "start": "concurrently \"npm:server\" \"npm:client\"",
     "test": "cd server && npm install && npm test",
-    "build": "cd client && npm install && npm run build",
+    "build": "cd client && npm install && npm update && npm run build",
     "instDep": "concurrently \"cd server && npm install\" \"cd client && npm install\"",
     "azure": "cd client && npm install && env REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }} && npm run build"
   },
