--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client": "cd client && npm start",
     "start": "concurrently \"npm:server\" \"npm:client\"",
     "instDep": "concurrently \"cd server && npm install\" \"cd client && npm install\"",
-    "test": "cd server && npm test",
+    "test": "cd server && npm install && npm test",
     "build": "cd client && npm install && npm run build"
   },
   "repository": {
