--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/react": "^5.9.0",
     "@fullcalendar/timegrid": "^5.9.0",
     "@mapbox/mapbox-gl-directions": "^4.1.0",
+    "@mapbox/polyline": "^1.1.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.1.10",
@@ -48,12 +49,13 @@
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.3.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2",
     "react-spinners": "^0.11.0",
     "react-transition-group": "^4.4.1",
     "simplebar-react": "^2.3.5",
     "sweetalert2": "^11.1.0",
-    "sweetalert2-react-content": "^4.1.1"
+    "sweetalert2-react-content": "^4.1.1",
+    "urlencode": "^1.1.0",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
