--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "client": "cd client && npm start",
     "start": "concurrently \"npm:server\" \"npm:client\"",
     "test": "cd server && npm install && npm test",
-    "build": "cd client && npm install && npm update && npm run build",
-    "instDep": "concurrently \"cd server && npm install\" \"cd client && npm install\"",
-    "test": "cd server && npm install && npm test",
-    "build": "cd client && npm install && npm run build"
+    "build": "cd client && npm install && npm run build",
+    "instDep": "concurrently \"cd server && npm install\" \"cd client && npm install\""
   },
   "repository": {
     "type": "git",
