switch to mantine

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@mantine/notifications": "^3.6.8",
     "@mantine/prism": "^3.6.8",
     "@mantine/rte": "^3.6.8",
+    "@primer/octicons-react": "^16.3.1",
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
