--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "tabler-icons-react": "^1.39.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
