--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "safe-courier-api",
-  "version": "1.0.0",
+  "version": "1.1.2",
   "description": "safe courier api for courier delivery service.",
   "main": "src/index.js",
   "type": "module",
@@ -23,27 +23,39 @@
   },
   "homepage": "https://github.com/kallyas/safe-courier#readme",
   "dependencies": {
-    "@hapi/joi": "^17.1.1",
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
-    "core-util-is": "^1.0.2",
+    "bcryptjs": "^2.4.3",
+    "chalk": "^5.0.1",
+    "cloudinary": "^1.29.1",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "debug": "^4.3.2",
-    "dotenv": "^8.6.0",
-    "express": "^4.17.1",
-    "express-rate-limit": "^5.3.0",
-    "express-validator": "^6.12.1",
-    "hash": "^0.2.1",
-    "helmet": "^4.6.0",
-    "http-errors": "^1.8.0",
-    "joi": "^17.4.2",
+    "dotenv": "^16.0.0",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "express-fileupload": "^1.3.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.4.0",
+    "googleapis": "^104.0.0",
+    "helmet": "^5.0.2",
+    "html-to-text": "^8.2.0",
+    "http-status": "^1.5.1",
+    "http-status-codes": "^2.2.0",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^2.2.0",
-    "mongoose": "^6.0.9",
+    "juice": "^8.0.0",
+    "moment": "^2.29.3",
+    "mongoose": "6.3.3",
+    "mongoose-autopopulate": "^0.16.1",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.6.3",
-    "redis": "^3.1.2",
-    "swagger-ui-express": "^4.1.6"
+    "nodemailer": "^6.7.4",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "rate-limiter": "^0.2.0",
+    "swagger-ui-express": "^4.1.6",
+    "validator": "^13.7.0",
+    "winston": "^3.7.2",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "chai": "^4.3.4",
