--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -28,7 +28,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build and push
+      
+      # Build and push the server Docker image
+      - name: Build and push server
         uses: docker/build-push-action@v2.6.1
         with:
           context: .
@@ -36,3 +38,13 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: idenmorisha/safe-courier-backend:latest
+      
+      # Build and push the client Docker image
+      - name: Build and push client
+        uses: docker/build-push-action@v2.6.1
+        with:
+          context: .
+          file: ./client/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: idenmorisha/safe-courier-frontend:latest
