--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -40,11 +40,11 @@ jobs:
           tags: idenmorisha/safe-courier-backend:latest
       
       # Build and push the client Docker image
-      - name: Build and push client
-        uses: docker/build-push-action@v2.6.1
-        with:
-          context: .
-          file: ./client/Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: true
+      # - name: Build and push client
+      #   uses: docker/build-push-action@v2.6.1
+      #   with:
+      #     context: .
+      #     file: ./client/Dockerfile
+      #     platforms: linux/amd64,linux/arm64
+      #     push: true
           tags: idenmorisha/safe-courier-frontend:latest
