--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,17 +7,22 @@ WORKDIR /app
 # Install Python and build essentials
 RUN apk add --no-cache python3 make g++
 
-# Install MongoDB and MongoDB tools from Alpine Edge repositories
-RUN echo 'http://dl-cdn.alpinelinux.org/alpine/edge/community' >> /etc/apk/repositories
-RUN apk update && apk add --no-cache mongodb mongodb-tools
+# Add the Alpine Linux v3.6 main and community repositories
+RUN echo 'http://dl-cdn.alpinelinux.org/alpine/v3.6/main' >> /etc/apk/repositories
+RUN echo 'http://dl-cdn.alpinelinux.org/alpine/v3.6/community' >> /etc/apk/repositories
+
+# Update the repository cache
+RUN apk update
+
+# Install MongoDB version 3.4.4
+RUN apk add mongodb=3.4.4-r0
+
+# Display MongoDB version
+RUN mongo --version
 
 # Create a directory for MongoDB data and logs
 RUN mkdir -p /data/db /var/log/mongodb
-
-# Initialize the data directory and set permissions
-RUN mongod --fork --logpath /var/log/mongodb/mongod.log --dbpath /data/db --smallfiles --port 27017 && \
-    sleep 5 && \
-    mongo admin --eval "db.createUser({ user: 'admin', pwd: 'password', roles: [ 'root' ] });"
+RUN chown 'root' /data/db
 
 # Install OpenRC, which is used to manage system services
 RUN apk add --no-cache openrc
@@ -29,4 +34,4 @@ RUN rc-update add mongodb default
 EXPOSE 5000
 
 # Start MongoDB and your server
-CMD rc-service mongodb start && node src/index.js
+CMD rc-service mongodb start && mongod --fork --logpath /var/log/mongodb/mongod.log && node src/index.js
