--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,5 @@
-# Use the official Ubuntu image as the base image
-FROM ubuntu:20.04
+# Use the official Debian Buster Slim image as the base image
+FROM debian:buster-slim
 
 # Set the working directory in the container
 WORKDIR /app
@@ -28,7 +28,7 @@ RUN apt-get update && apt-get install -y nodejs npm
 # Expose the port that your Node.js Express app listens on (e.g., 3000)
 EXPOSE 5000
 
-# Install OpenRC, which is used to manage system services (Ubuntu uses systemd, not OpenRC)
+# Install OpenRC, which is used to manage system services (Debian also uses systemd)
 RUN apt-get update && apt-get install -y systemd
 
 # Enable MongoDB to start at boot
