--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,37 +14,26 @@ jobs:
       - uses: actions/checkout@v2.3.4
         with:
           fetch-depth: 0
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1.2.0
         with:
           platforms: all
+
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1.5.1
         with:
           version: latest
+
       - name: Login to DockerHub
         uses: docker/login-action@v1.10.0
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      
-      # Build and push the server Docker image
-      - name: Build and push server
-        uses: docker/build-push-action@v2.6.1
-        with:
-          context: .
-          file: ./server/Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: idenmorisha/safe-courier-backend:latest
-      
-      # Build and push the client Docker image
-      # - name: Build and push client
-      #   uses: docker/build-push-action@v2.6.1
-      #   with:
-      #     context: .
-      #     file: ./client/Dockerfile
-      #     platforms: linux/amd64,linux/arm64
-      #     push: true
-          # tags: idenmorisha/safe-courier-frontend:latest
+
+      # Build and push using Docker Compose
+      - name: Build and push images using Docker Compose
+        run: |
+          docker-compose -f docker-compose.yml build
+          docker-compose -f docker-compose.yml push
