--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -13,8 +13,11 @@ COPY server/package.json server/package-lock.json ./
 # Install dependencies
 RUN npm install --production
 
-# Expose the port that your Node.js Express app listens on (e.g., 3000)
+# Expose the port that your Node.js Express app listens on (e.g., 5000)
 EXPOSE 5000
+
+# Copy the rest of the code from ./server to the working directory /app
+COPY server/ ./
 
 # Start your Node.js server
 CMD ["node", "$(find src -name 'index.js')"]
